--- a/website/.gitignore
+++ b/website/.gitignore
@@ -1,3 +1,4 @@
+!
 vendor/
 composer.lock
 phpunit.xml
@@ -6,6 +7,7 @@ phpunit.xml
 .phpunit.result.cache
 composer.phar
 package.tar
+!sample.env
 .env
 var/
 .sass-cache
